# BarsikTerm

./: .gitignore  CMakeLists.txt  README.md
deb/: build_deb.sh
deb/v0.1.0/DEBIAN/: control
src/: MainWindow.cpp  MainWindow.h  TerminalWidget.cpp  TerminalWidget.h  main.cpp
